--- a/osgi/source/org.apache.servicemix.bundles.hadoop-core.source/pom.xml
+++ b/osgi/source/org.apache.servicemix.bundles.hadoop-core.source/pom.xml
@@ -6,12 +6,12 @@
 		<groupId>org.elyast.orbit.osgi</groupId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>org.apache.hbase.source</artifactId>
-	<version>0.90.4</version>
+	<artifactId>org.apache.servicemix.bundles.hadoop-core.source</artifactId>
+	<version>1.0.1</version>
 	<properties>
-		<wrapped.version>0.90.4</wrapped.version>
-		<wrapped.artifactId>hbase</wrapped.artifactId>
-		<bundle.symbolicName>org.apache.hbase</bundle.symbolicName>
-		<wrapped.groupId>org.apache.hbase</wrapped.groupId>
+		<wrapped.version>1.0.0_1</wrapped.version>
+		<wrapped.artifactId>org.apache.servicemix.bundles.hadoop-core</wrapped.artifactId>
+		<bundle.symbolicName>org.apache.servicemix.bundles.hadoop-core</bundle.symbolicName>
+		<wrapped.groupId>org.apache.servicemix.bundles</wrapped.groupId>
 	</properties>
 </project>
