--- a/osgi/source/org.datanucleus.store.xml.source/pom.xml
+++ b/osgi/source/org.datanucleus.store.xml.source/pom.xml
@@ -6,12 +6,12 @@
 		<groupId>org.elyast.orbit.osgi</groupId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>org.apache.hbase.source</artifactId>
-	<version>0.90.4</version>
+	<artifactId>org.datanucleus.store.xml.source</artifactId>
+	<version>3.0.1</version>
 	<properties>
-		<wrapped.version>0.90.4</wrapped.version>
-		<wrapped.artifactId>hbase</wrapped.artifactId>
-		<bundle.symbolicName>org.apache.hbase</bundle.symbolicName>
-		<wrapped.groupId>org.apache.hbase</wrapped.groupId>
+		<wrapped.version>3.0.1</wrapped.version>
+		<wrapped.artifactId>datanucleus-xml</wrapped.artifactId>
+		<bundle.symbolicName>org.datanucleus.store.xml</bundle.symbolicName>
+		<wrapped.groupId>org.datanucleus</wrapped.groupId>
 	</properties>
 </project>
