--- a/osgi/source/pom.xml
+++ b/osgi/source/pom.xml
@@ -97,7 +97,7 @@
 		<module>org.apache.james.apache-mime4j-core.source</module>
 		<module>scalaz.source</module>
 		<module>dispatch.source</module>		
-		<!-- module>org.apache.servicemix.bundles.hadoop-core.source</module-->	
+		<module>org.apache.hadoop.common.source</module>	
 	</modules>
 	
 	<repositories>
