--- a/osgi/bundle/org.apache.hadoop.common/pom.xml
+++ b/osgi/bundle/org.apache.hadoop.common/pom.xml
@@ -6,16 +6,16 @@
 		<artifactId>bundle</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>org.apache.servicemix.bundles.hadoop-core</artifactId>
-	<version>1.0.1</version>
+	<artifactId>org.apache.hadoop.common</artifactId>
+	<version>0.23.1.1</version>
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
 	<properties>
-		<wrapped.version>1.0.0_1</wrapped.version>
-		<wrapped.artifactId>org.apache.servicemix.bundles.hadoop-core</wrapped.artifactId>
-		<bundle.symbolicName>org.apache.servicemix.bundles.hadoop-core</bundle.symbolicName>
-		<wrapped.groupId>org.apache.servicemix.bundles</wrapped.groupId>
+		<wrapped.version>0.23.1</wrapped.version>
+		<wrapped.artifactId>hadoop-common</wrapped.artifactId>
+		<bundle.symbolicName>org.apache.hadoop.common</bundle.symbolicName>
+		<wrapped.groupId>org.apache.hadoop</wrapped.groupId>
 	</properties>
 
 </project>
