--- a/osgi/bundle/org.apache.hbase/pom.xml
+++ b/osgi/bundle/org.apache.hbase/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>		
+	<parent>
 		<groupId>org.elyast.orbit.osgi</groupId>
 		<artifactId>bundle</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.apache.hbase</artifactId>
-	<version>0.92.1.1</version>
+	<version>0.92.1.3</version>
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
@@ -17,5 +17,13 @@
 		<bundle.symbolicName>org.apache.hbase</bundle.symbolicName>
 		<wrapped.groupId>org.apache.hbase</wrapped.groupId>
 	</properties>
-	
+
+	<dependencies>
+		<dependency>
+			<version>0.23.1</version>
+			<artifactId>hadoop-common</artifactId>
+			<groupId>org.apache.hadoop</groupId>
+		</dependency>
+	</dependencies>
+
 </project>
