--- a/osgi/bundle/org.apache.hbase/pom.xml
+++ b/osgi/bundle/org.apache.hbase/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.apache.hbase</artifactId>
-	<version>0.92.1.3</version>
+	<version>0.92.1.4</version>
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
@@ -20,8 +20,8 @@
 
 	<dependencies>
 		<dependency>
-			<version>0.23.1</version>
-			<artifactId>hadoop-common</artifactId>
+			<version>1.0.2</version>
+			<artifactId>hadoop-core</artifactId>
 			<groupId>org.apache.hadoop</groupId>
 		</dependency>
 	</dependencies>
