--- a/osgi/bundle/org.datanucleus.store.hbase/pom.xml
+++ b/osgi/bundle/org.datanucleus.store.hbase/pom.xml
@@ -6,15 +6,15 @@
 		<artifactId>bundle</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>org.datanucleus.store.xml</artifactId>
-	<version>3.0.2</version>
+	<artifactId>org.datanucleus.store.hbase</artifactId>
+	<version>3.0.7</version>
 	<packaging>jar</packaging>
 	<name>${bundle.symbolicName}</name>
 
 	<properties>
-		<wrapped.version>3.0.1</wrapped.version>
-		<wrapped.artifactId>datanucleus-xml</wrapped.artifactId>
-		<bundle.symbolicName>org.datanucleus.store.xml</bundle.symbolicName>
+		<wrapped.version>3.0.6</wrapped.version>
+		<wrapped.artifactId>datanucleus-hbase</wrapped.artifactId>
+		<bundle.symbolicName>org.datanucleus.store.hbase</bundle.symbolicName>
 		<wrapped.groupId>org.datanucleus</wrapped.groupId>
 	</properties>
 
