--- a/osgi/source/org.apache.hbase.source/pom.xml
+++ b/osgi/source/org.apache.hbase.source/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.apache.hbase.source</artifactId>
-	<version>0.92.1.3</version>
+	<version>0.92.1.4</version>
 	<properties>
 		<wrapped.version>0.92.1</wrapped.version>
 		<wrapped.artifactId>hbase</wrapped.artifactId>
@@ -19,6 +19,30 @@
 		<dependency>
 			<version>0.23.1</version>
 			<artifactId>hadoop-common</artifactId>
+			<groupId>org.apache.hadoop</groupId>
+			<classifier>sources</classifier>
+		</dependency>
+		<dependency>
+			<version>0.23.1</version>
+			<artifactId>hadoop-hdfs</artifactId>
+			<groupId>org.apache.hadoop</groupId>
+			<classifier>sources</classifier>
+		</dependency>
+		<dependency>
+			<version>0.23.1</version>
+			<artifactId>hadoop-mapreduce-client-common</artifactId>
+			<groupId>org.apache.hadoop</groupId>
+			<classifier>sources</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-mapreduce-client-core</artifactId>
+			<version>0.23.1</version>
+			<classifier>sources</classifier>
+		</dependency>
+		<dependency>
+			<version>0.23.1</version>
+			<artifactId>hadoop-auth</artifactId>
 			<groupId>org.apache.hadoop</groupId>
 			<classifier>sources</classifier>
 		</dependency>
