--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -218,11 +218,23 @@
 			<groupId>org.datanucleus</groupId>
 			<artifactId>datanucleus-mongodb</artifactId>
 			<version>3.0.6</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.mongodb</groupId>
+					<artifactId>mongo-java-driver</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>org.datanucleus.store.mongodb.source</artifactId>
 			<version>3.0.6</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.mongodb</groupId>
+					<artifactId>mongo-java-driver</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.datanucleus</groupId>
@@ -470,12 +482,12 @@
 		<dependency> 
 			<groupId>org.elyast.orbit.osgi</groupId> 
 			<artifactId>akka</artifactId> 
-			<version>2.0.1.6</version> 
+			<version>2.0.1.7</version> 
 		</dependency>
 		<dependency> 
 			<groupId>org.elyast.orbit.osgi</groupId> 
 			<artifactId>akka.source</artifactId> 
-			<version>2.0.1.6</version> 
+			<version>2.0.1.7</version> 
 		</dependency>		
 		<dependency>
 		<groupId>org.jboss.netty</groupId>
