--- a/osgi/bundle/dispatch/pom.xml
+++ b/osgi/bundle/dispatch/pom.xml
@@ -8,7 +8,7 @@
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>dispatch</artifactId>
-	<version>0.8.8</version>
+	<version>0.8.8.0</version>
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
@@ -17,6 +17,7 @@
 		<wrapped.artifactId>dispatch-core_${scala.version}</wrapped.artifactId>
 		<bundle.symbolicName>dispatch</bundle.symbolicName>
 		<wrapped.groupId>net.databinder</wrapped.groupId>
+		<inline.enabled>false</inline.enabled>
 	</properties>
 
 	<dependencies>
