--- a/osgi/bundle/akka/pom.xml
+++ b/osgi/bundle/akka/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>akka</artifactId>
-	<version>2.0.1.7</version>
+	<version>2.0.1.9</version>
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
@@ -61,52 +61,17 @@
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<version>${wrapped.version}</version>
-			<artifactId>akka-mongo-mailbox</artifactId>
-		</dependency>		
-		<dependency>
-			<groupId>${wrapped.groupId}</groupId>
-			<version>${wrapped.version}</version>
 			<artifactId>akka-transactor</artifactId>
 		</dependency>		
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<version>${wrapped.version}</version>
-			<artifactId>akka-zookeeper-mailbox</artifactId>
-		</dependency>	
-        <dependency>
-        	<groupId>com.mongodb</groupId>
-    		<artifactId>bson-driver_2.9.0-1</artifactId>
-		    <version>0.2.0</version>
-        </dependency>
-		<dependency>
-		    <groupId>com.mongodb.async</groupId>
-		    <artifactId>mongo-driver_2.9.0-1</artifactId>
-		    <version>0.2.9-1</version>
+			<artifactId>akka-kernel</artifactId>
 		</dependency>
 		<dependency>
-		    <groupId>org.scala-tools</groupId>
-		    <artifactId>scala-stm_2.9.1</artifactId>
-		    <version>0.5</version>
-		</dependency>
-		<dependency>
-		    <groupId>zkclient</groupId>
-		    <artifactId>zkclient</artifactId>
-		    <version>0.3</version>
-		</dependency>
-		<dependency>
-		    <groupId>net.debasishg</groupId>
-		    <artifactId>sjson_2.9.1</artifactId>
-		    <version>0.15</version>
-		</dependency>
-		<dependency>
-		    <groupId>voldemort.store.compress</groupId>
-		    <artifactId>h2-lzf</artifactId>
-		    <version>1.0</version>
-		</dependency>
-		<dependency>
-		    <groupId>com.twitter</groupId>
-		    <artifactId>util-core</artifactId>
-		    <version>1.12.2</version>
+			<groupId>${wrapped.groupId}</groupId>
+			<version>${wrapped.version}</version>
+			<artifactId>akka-zeromq</artifactId>
 		</dependency>
 	</dependencies>
 
