--- a/osgi/bundle/org.apache.hadoop.core/pom.xml
+++ b/osgi/bundle/org.apache.hadoop.core/pom.xml
@@ -2,16 +2,20 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>source</artifactId>
 		<groupId>org.elyast.orbit.osgi</groupId>
+		<artifactId>bundle</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>org.apache.hadoop.common.source</artifactId>
-	<version>0.23.1.1</version>
+	<artifactId>org.apache.hadoop.core</artifactId>
+	<version>1.0.2.1</version>
+	<packaging>bundle</packaging>
+	<name>${bundle.symbolicName}</name>
+
 	<properties>
-		<wrapped.version>0.23.1</wrapped.version>
-		<wrapped.artifactId>hadoop-common</wrapped.artifactId>
-		<bundle.symbolicName>org.apache.hadoop.common</bundle.symbolicName>
+		<wrapped.version>1.0.2</wrapped.version>
+		<wrapped.artifactId>hadoop-core</wrapped.artifactId>
+		<bundle.symbolicName>org.apache.hadoop.core</bundle.symbolicName>
 		<wrapped.groupId>org.apache.hadoop</wrapped.groupId>
 	</properties>
+
 </project>
