--- a/osgi/bundle/org.apache.hbase/pom.xml
+++ b/osgi/bundle/org.apache.hbase/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.apache.hbase</artifactId>
-	<version>0.92.1.4</version>
+	<version>0.92.1.7</version>
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
@@ -16,6 +16,7 @@
 		<wrapped.artifactId>hbase</wrapped.artifactId>
 		<bundle.symbolicName>org.apache.hbase</bundle.symbolicName>
 		<wrapped.groupId>org.apache.hbase</wrapped.groupId>
+		<inline.enabled>false</inline.enabled>
 	</properties>
 
 	<dependencies>
