--- a/osgi/bundle/org.apache.poi/pom.xml
+++ b/osgi/bundle/org.apache.poi/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.apache.poi</artifactId>
-	<version>3.7.4</version>
+	<version>3.7.0.0</version>
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
@@ -16,6 +16,7 @@
 		<wrapped.artifactId>poi</wrapped.artifactId>
 		<bundle.symbolicName>org.apache.poi</bundle.symbolicName>
 		<wrapped.groupId>org.apache.poi</wrapped.groupId>
+		<inline.enabled>false</inline.enabled>
 	</properties>
 
 	<dependencies>
@@ -28,11 +29,6 @@
 			<groupId>${wrapped.groupId}</groupId>
 			<artifactId>poi-ooxml-schemas</artifactId>
 			<version>${wrapped.version}</version>
-		</dependency>	
-		<dependency>
-			<groupId>org.apache.xmlbeans</groupId>
-			<artifactId>xmlbeans</artifactId>
-			<version>2.3.0</version>
 		</dependency>	
 	</dependencies>
 </project>
