--- a/osgi/bundle/org.scalamock/pom.xml
+++ b/osgi/bundle/org.scalamock/pom.xml
@@ -8,15 +8,16 @@
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.scalamock</artifactId>
-	<version>2.2</version>
+	<version>2.3.0.0</version>
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
 	<properties>
-		<wrapped.version>2.2</wrapped.version>
+		<wrapped.version>2.3</wrapped.version>
 		<wrapped.artifactId>scalamock-core_${scala.version}</wrapped.artifactId>
 		<bundle.symbolicName>org.scalamock</bundle.symbolicName>
 		<wrapped.groupId>org.scalamock</wrapped.groupId>
+		<inline.enabled>false</inline.enabled>
 	</properties>
 
 	<dependencies>
@@ -25,6 +26,11 @@
 			<artifactId>scalamock-scalatest-support_${scala.version}</artifactId>
 			<version>${wrapped.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>${wrapped.groupId}</groupId>
+			<artifactId>scalamock-junit3-support_${scala.version}</artifactId>
+			<version>${wrapped.version}</version>
+		</dependency>		
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<artifactId>scalamock-compiler-plugin_${scala.version}</artifactId>
