--- a/osgi/bundle/org.zeromq/pom.xml
+++ b/osgi/bundle/org.zeromq/pom.xml
@@ -7,16 +7,16 @@
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
-	<artifactId>scalaj</artifactId>
-	<version>1.2.0.0</version>
+	<artifactId>org.zeromq</artifactId>
+	<version>0.0.5.1</version>
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
 	<properties>
-		<wrapped.version>1.2</wrapped.version>
-		<wrapped.artifactId>scalaj-collection_${scala.version}</wrapped.artifactId>
-		<bundle.symbolicName>scalaj</bundle.symbolicName>
-		<wrapped.groupId>org.scalaj</wrapped.groupId>
+		<wrapped.version>0.0.5</wrapped.version>
+		<wrapped.artifactId>zeromq-scala-binding_${scala.version}</wrapped.artifactId>
+		<bundle.symbolicName>org.zeromq</bundle.symbolicName>
+		<wrapped.groupId>org.zeromq</wrapped.groupId>
 	</properties>
 
 </project>
