--- a/osgi/bundle/scala.concurrent.stm/pom.xml
+++ b/osgi/bundle/scala.concurrent.stm/pom.xml
@@ -2,21 +2,20 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>bundle</artifactId>
 		<groupId>org.elyast.orbit.osgi</groupId>
+		<artifactId>bundle</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>..</relativePath>
 	</parent>
-	<artifactId>scalaj</artifactId>
-	<version>1.2.0.0</version>
+	<artifactId>scala.concurrent.stm</artifactId>
+	<version>0.5.0.0</version>
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
 	<properties>
-		<wrapped.version>1.2</wrapped.version>
-		<wrapped.artifactId>scalaj-collection_${scala.version}</wrapped.artifactId>
-		<bundle.symbolicName>scalaj</bundle.symbolicName>
-		<wrapped.groupId>org.scalaj</wrapped.groupId>
+		<wrapped.version>0.5</wrapped.version>
+		<wrapped.artifactId>scala-stm_2.9.1</wrapped.artifactId>
+		<bundle.symbolicName>scala.concurrent.stm</bundle.symbolicName>
+		<wrapped.groupId>org.scala-tools</wrapped.groupId>
 	</properties>
-
+	
 </project>
