--- a/osgi/bundle/sjson.json/pom.xml
+++ b/osgi/bundle/sjson.json/pom.xml
@@ -6,16 +6,16 @@
 		<artifactId>bundle</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>org.apache.hadoop.common</artifactId>
-	<version>0.23.1.1</version>
+	<artifactId>sjson.json</artifactId>
+	<version>0.15.0.0</version>
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
 	<properties>
-		<wrapped.version>0.23.1</wrapped.version>
-		<wrapped.artifactId>hadoop-common</wrapped.artifactId>
-		<bundle.symbolicName>org.apache.hadoop.common</bundle.symbolicName>
-		<wrapped.groupId>org.apache.hadoop</wrapped.groupId>
+		<wrapped.version>0.15</wrapped.version>
+		<wrapped.artifactId>sjson_2.9.1</wrapped.artifactId>
+		<bundle.symbolicName>sjson.json</bundle.symbolicName>
+		<wrapped.groupId>net.debasishg</wrapped.groupId>
 	</properties>
-
+	
 </project>
