--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -28,9 +28,9 @@
 			<url>http://download.eclipse.org/eclipse/updates/3.7</url>
 		</repository>
 		<repository>
-			<id>orbit-S20120428190502</id>
+			<id>orbit-release</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/tools/orbit/downloads/drops/S20120428190502/repository/</url>
+			<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20120526062928/repository/</url>
 		</repository>
 		<repository>
 			<id>jetty</id>
@@ -197,12 +197,12 @@
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>org.datanucleus.store.xml</artifactId>
-			<version>3.0.2</version>
+			<version>3.0.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>org.datanucleus.store.xml.source</artifactId>
-			<version>3.0.2</version>
+			<version>3.0.1.0</version>
 		</dependency>		
 		<dependency>
 			<groupId>org.datanucleus</groupId>
@@ -280,12 +280,12 @@
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>org.apache.poi</artifactId>
-			<version>3.7.4</version>
+			<version>3.7.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>org.apache.poi.source</artifactId>
-			<version>3.7.4</version>
+			<version>3.7.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.joda</groupId>
@@ -323,11 +323,15 @@
 			<artifactId>org.apache.servicemix.bundles.ehcache.source</artifactId>
 			<version>2.5.1.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.servicemix.bundles</groupId>
+			<artifactId>org.apache.servicemix.bundles.xmlbeans</artifactId>
+			<version>2.5.0_2</version>
+		</dependency>
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>org.apache.hbase</artifactId>
-			<version>0.92.1.4</version>
+			<version>0.92.1.7</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>zookeeper</artifactId>
@@ -342,7 +346,7 @@
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>org.apache.hbase.source</artifactId>
-			<version>0.92.1.4</version>
+			<version>0.92.1.7</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>zookeeper</artifactId>
@@ -356,8 +360,18 @@
 		</dependency>
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
+			<artifactId>org.apache.hadoop.core</artifactId>
+			<version>1.0.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.elyast.orbit.osgi</groupId>
+			<artifactId>org.apache.hadoop.core.source</artifactId>
+			<version>1.0.2.1</version>
+		</dependency>		
+		<dependency>
+			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>org.datanucleus.store.hbase</artifactId>
-			<version>3.0.7</version>
+			<version>3.0.6.0</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>hadoop-core</artifactId>
@@ -372,7 +386,7 @@
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>org.datanucleus.store.hbase.source</artifactId>
-			<version>3.0.7</version>
+			<version>3.0.6.0</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>hadoop-core</artifactId>
@@ -428,18 +442,23 @@
 		</dependency>
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
+			<artifactId>org.scalamock</artifactId>
+			<version>2.3.0.0</version>
+		</dependency>		
+		<dependency>
+			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>scalaj</artifactId>
 			<version>1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>dispatch</artifactId>
-			<version>0.8.8</version>
+			<version>0.8.8.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>dispatch.source</artifactId>
-			<version>0.8.8</version>
+			<version>0.8.8.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.james</groupId>
@@ -464,12 +483,12 @@
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>scalaz</artifactId>
-			<version>6.0.4</version>
+			<version>6.0.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>scalaz.source</artifactId>
-			<version>6.0.4</version>
+			<version>6.0.4.0</version>
 		</dependency>
 
 		<dependency>
@@ -482,12 +501,12 @@
 		<dependency> 
 			<groupId>org.elyast.orbit.osgi</groupId> 
 			<artifactId>akka</artifactId> 
-			<version>2.0.1.7</version> 
+			<version>2.0.1.9</version> 
 		</dependency>
 		<dependency> 
 			<groupId>org.elyast.orbit.osgi</groupId> 
 			<artifactId>akka.source</artifactId> 
-			<version>2.0.1.7</version> 
+			<version>2.0.1.9</version> 
 		</dependency>		
 		<dependency>
 		<groupId>org.jboss.netty</groupId>
@@ -499,7 +518,36 @@
 		    <artifactId>objenesis</artifactId>
 		    <version>1.2</version>
 		</dependency>    
-
+		<dependency>
+			<groupId>org.elyast.orbit.osgi</groupId>
+			<artifactId>org.zeromq</artifactId>
+			<version>0.0.5.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.elyast.orbit.osgi</groupId>
+			<artifactId>scala.concurrent.stm</artifactId>
+			<version>0.5.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.elyast.orbit.osgi</groupId>
+			<artifactId>sjson.json</artifactId>
+			<version>0.15.0.0</version>
+		</dependency>		
+		<dependency>
+			<groupId>org.elyast.orbit.osgi</groupId>
+			<artifactId>voldemort.store.compress.lzf</artifactId>
+			<version>1.0.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.elyast.orbit.osgi</groupId>
+			<artifactId>jnr.constants</artifactId>
+			<version>0.8.2.0</version>
+		</dependency>				
+		<dependency>
+		    <groupId>com.sun.jna</groupId>
+		    <artifactId>com.springsource.com.sun.jna</artifactId>
+		    <version>3.0.5</version>
+		</dependency>					
 	</dependencies>
 	<build>
 		<plugins>
