--- a/system.tests/pom.xml
+++ b/system.tests/pom.xml
@@ -147,6 +147,16 @@
 				<configuration>
 					<scalaVersion>${scala.version}</scalaVersion>
 					<sendJavaToScalac>false</sendJavaToScalac>
+					<args> 
+                		<arg>-P:continuations:enable</arg> 
+              		</args>
+					<compilerPlugins>
+                        <compilerPlugin>
+                            <groupId>org.scala-lang.plugins</groupId>
+                            <artifactId>continuations</artifactId>
+                            <version>${scala.version}</version>
+                        </compilerPlugin>
+                    </compilerPlugins>              		 
 				</configuration>
 			</plugin>
 
