Added spray osgified lets test it

--- a/osgi/source/pom.xml
+++ b/osgi/source/pom.xml
@@ -97,6 +97,8 @@
 		<module>dispatch.source</module>	
 		<module>akka.source</module>	
 		<module>org.apache.hadoop.core.source</module>
+		<module>spray.source</module>
+		<module>net.liftweb.lift.json.source</module>
 	</modules>
 	
 	<repositories>
