--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<module>org.datanucleus.core.feature</module>
 		<module>org.lang.scala.tools.feature</module>
 		<module>akka.feature</module>
-		<module>spray.feature</module>
+		<module>unfiltered.feature</module>
 		<module>repository</module>
 	</modules>
 
