--- a/osgi/bundle/unfiltered/pom.xml
+++ b/osgi/bundle/unfiltered/pom.xml
@@ -6,73 +6,82 @@
 		<artifactId>bundle</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>akka</artifactId>
-	<version>2.0.2.0</version>
+	<artifactId>unfiltered</artifactId>
+	<version>0.6.3.0</version>
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
 	<repositories>
 		<repository>
-			<id>typesafe</id>
-			<name>Typesafe Repository</name>
-			<url>http://repo.typesafe.com/typesafe/releases/</url>
-		</repository>
+			<id>oss</id>
+			<name>oss</name>
+			<url>http://oss.sonatype.org/content/repositories/releases/</url>
+		</repository>		
 	</repositories>
 
 	<properties>
-		<wrapped.version>2.0.2</wrapped.version>
-		<wrapped.artifactId>akka-actor</wrapped.artifactId>
-		<bundle.symbolicName>akka</bundle.symbolicName>
-		<wrapped.groupId>com.typesafe.akka</wrapped.groupId>
-		<inline.enabled>false</inline.enabled>
+		<wrapped.version>0.6.3</wrapped.version>
+		<wrapped.artifactId>unfiltered_${scala.version}</wrapped.artifactId>
+		<bundle.symbolicName>unfiltered</bundle.symbolicName>
+		<wrapped.groupId>net.databinder</wrapped.groupId>
 	</properties>
 	
 	<dependencies>
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<version>${wrapped.version}</version>
-			<artifactId>akka-remote</artifactId>
+			<artifactId>unfiltered-filter_${scala.version}</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<version>${wrapped.version}</version>
-			<artifactId>akka-slf4j</artifactId>
+			<artifactId>unfiltered-filter-async_${scala.version}</artifactId>
 		</dependency>		
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<version>${wrapped.version}</version>
-			<artifactId>akka-testkit</artifactId>
+			<artifactId>unfiltered-netty_${scala.version}</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<version>${wrapped.version}</version>
-			<artifactId>akka-mailboxes-common</artifactId>
-		</dependency>	
-		<dependency>
-			<groupId>${wrapped.groupId}</groupId>
-			<version>${wrapped.version}</version>
-			<artifactId>akka-file-mailbox</artifactId>
+			<artifactId>unfiltered-netty-websockets_${scala.version}</artifactId>
 		</dependency>					
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<version>${wrapped.version}</version>
-			<artifactId>akka-agent</artifactId>
-		</dependency>		
+			<artifactId>unfiltered-jetty_${scala.version}</artifactId>
+		</dependency>	
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<version>${wrapped.version}</version>
-			<artifactId>akka-transactor</artifactId>
-		</dependency>		
+			<artifactId>unfiltered-netty-server_${scala.version}</artifactId>
+		</dependency>	
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<version>${wrapped.version}</version>
-			<artifactId>akka-kernel</artifactId>
+			<artifactId>unfiltered-uploads_${scala.version}</artifactId>
+		</dependency>	
+		<dependency>
+			<groupId>${wrapped.groupId}</groupId>
+			<version>${wrapped.version}</version>
+			<artifactId>unfiltered-util_${scala.version}</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<version>${wrapped.version}</version>
-			<artifactId>akka-zeromq</artifactId>
-		</dependency>
+			<artifactId>unfiltered-scalatest_${scala.version}</artifactId>
+		</dependency>	
+		<dependency>
+			<groupId>${wrapped.groupId}</groupId>
+			<version>${wrapped.version}</version>
+			<artifactId>unfiltered-json_${scala.version}</artifactId>
+		</dependency>	
+		<dependency>
+			<groupId>${wrapped.groupId}</groupId>
+			<version>${wrapped.version}</version>
+			<artifactId>unfiltered-oauth_${scala.version}</artifactId>
+		</dependency>												
 	</dependencies>
 
 </project>
