--- a/unfiltered.feature/pom.xml
+++ b/unfiltered.feature/pom.xml
@@ -7,6 +7,6 @@
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
-	<artifactId>spray.feature</artifactId>
+	<artifactId>unfiltered.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
 </project>
